infra/cert-manager/networkpolicies/cert-manager-webhook.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-webhook
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/name: webhook
      app.kubernetes.io/component: webhook
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "6080"
              protocol: TCP
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
