infra/cert-manager/networkpolicies/egress-cert-manager.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-cert-manager
  namespace: cert-manager
spec:
  selector: app.kubernetes.io/instance == 'cert-manager'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - ${HOST_IP}/32
        ports:
          - 6443
